--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"My Blog",
     "subTitle":"hjcのBlog",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/200364885?v=4",
     "GMEEK_VERSION":"last"
 }
