--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"My Blog",
-    "subTitle":"hjcのBlog",
+    "subTitle":"Welcome to hjcのBlog",
     "avatarUrl":"https://tse4-mm.cn.bing.net/th/id/OIP-C.IwITc_TsLgPtAF8M3EZutAHaHa?rs=1&pid=ImgDetMain",
     "GMEEK_VERSION":"last"
 }
